--- a/index.htm
+++ b/index.htm
@@ -56,6 +56,13 @@
         <h2 id="about">About</h2>
         <p>Milwaukee Azure is a user group of IT people from the Milwaukee, WI area that have gotten together in a common interest surrounding the Microsoft Azure cloud platform. The group was started in May 2016 when <a href="http://pietschsoft.com" target="_blank">Chris Pietschmann</a> started the <a href="http://mkeazure.slack.com" target="_blank">Milwaukee Azure Slack Group</a> in an effort to get the conversations started.</p>
         <p><a style="float:right" href="https://github.com/MkeAzure"><img style="width: 2em;" src="images/github-logo.png" alt="MkeAzure on Github" target="_blank"/></a>The Milwaukee Azure website hosted at <a href="http://MkeAzure.com">MkeAzure.com</a> is hosted as an <a href="https://github.com/MkeAzure/website" target="_blank">Open Source project on Github</a> utilizing Github Pages. This not only provides a free way to host the website, but also an extremely convenient and open method of the Milwaukee Azure community to manage the website as a whole.</p>
+        <p>
+            <strong>Group Organizers:</strong>
+            <ul>
+                <li><a href="http://BuildAzure.com" target="_blank">Chris Pietschmann</a></li>
+                <li><a href="https://www.linkedin.com/in/kevinmziegler" target="_blank">Kevin Ziegler</a></li>
+            </ul>
+        </p>
         
         <h2 id="contact">Contact</h2>
         <p>If you are in or near the Milwaukee, WI area and would like to join the Slack group, please contact us at the following:</p>
