updated nav links

--- a/index.htm
+++ b/index.htm
@@ -19,14 +19,19 @@
         <div class="header clearfix">
             <nav>
                 <ul class="nav nav-pills pull-xs-right">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
+                    <!--
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                    -->
+                    <li class="nav-item">
+                        <a href="http://www.meetup.com/Milwaukee-Azure-Meetup/" target="_blank"><img style="margin-top: 0.5em; width: 2em;" src="images/meetup-logo-bw.png" alt="MkeAzure on Meetup"/></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="http://mkeazure.slack.com" target="_blank"><img style="margin-top: 0; width: 2.4em;" src="images/slack-logo-bw.png" alt="MkeAzure on Slack"/></a>
                     </li>
                     <li class="nav-item">
                         <a href="http://github.com/mkeazure" target="_blank"><img style="margin-top: 0.6em; width: 1.2em;" src="images/github-logo.png" alt="MkeAzure on Github"/></a>
