added slack signup link

--- a/index.htm
+++ b/index.htm
@@ -44,15 +44,15 @@
         <div class="jumbotron jumbotron-slack">
             <h1 class="display-3">Join the Conversation</h1>
             <p class="lead">Join the conversation on the MkeAzure Slack group!</p>
-            <p><a class="btn btn-lg btn-success" href="http://mkeazure.slack.com/signup" target="_blank">Join Slack</a></p>
+            <p><a class="btn btn-lg btn-success" href="https://mkeazureslack.azurewebsites.net" target="_blank">Join Slack</a></p>
         </div>
 
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <h2>Conversation</h2>
-                    <p>Come join the conversation around Azure with other from in and around the Milwaukee, WI area!</p>
-                    <p><a class="btn btn-success" href="http://mkeazure.slack.com/signup" target="_blank">Join Slack</a></p>
+                    <p>Come join the conversation around Azure with others from in and around the Milwaukee, WI area!</p>
+                    <p><a class="btn btn-success" href="https://mkeazureslack.azurewebsites.net" target="_blank">Join Slack</a></p>
                 </div>
                 <div class="col-md-6">
                     <h2>Meetups</h2>
