--- a/index.htm
+++ b/index.htm
@@ -38,7 +38,7 @@
                     </li>
                 </ul>
             </nav>
-            <h3>Milwaukee Azure</h3>
+            <h3><img class="logo" src="images/MkeAzure-Logo-Transparent.png" /> Milwaukee Azure</h3>
         </div>
         
         <div class="jumbotron jumbotron-slack">
