--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-md-6">
                     <h2>Meetups</h2>
-                    <p>Interested in attending a meetup? <em>FYI, we're still planning out the first meetup</em></p>
+                    <p>Interested in attending a meetup?</p>
                     <p><a class="btn btn-danger" href="http://www.meetup.com/Milwaukee-Azure-Meetup/" target="_blank">View Meetups</a></p>
                 </div>
             </div>
