--- a/index.htm
+++ b/index.htm
@@ -46,21 +46,32 @@
             <p class="lead">Register to attend the 2018 Global Azure Bootcamp in Milwaukee! We have some great sessions lined up, including 2 IoT sessions, Azure Search, Azure ML, Azure Cosmos DB, and more!</p>
             <p><a class="btn btn-lg btn-success" href="https://www.eventbrite.com/e/2018-milwaukee-global-azure-bootcamp-day-tickets-42379895408" target="_blank">Register for Free</a></p>
         </div>
+  
+
+        <div class="container">
+            <hr/>
+        </div>
 
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h2>Meetups</h2>
-                    <p>Interested in attending a meetup? Come learn, meet great people, and get some free food!</p>
-                    <p><a class="btn btn-info" href="http://www.meetup.com/Milwaukee-Azure-Meetup/" target="_blank">View Meetups</a></p>
+                        <h2>Meetups</h2>
+                        <p>Interested in attending a meetup? Come learn, meet great people, and get some free food!</p>
+                        <p><a class="btn btn-info" href="http://www.meetup.com/Milwaukee-Azure-Meetup/" target="_blank">View Meetups</a></p>
+                        
+                        <h2>Conversation</h2>
+                        <p>Come join the conversation around Azure with others from in and around the Milwaukee, WI area!</p>
+                        <p><a class="btn btn-success" href="https://mkeazureslack.azurewebsites.net" target="_blank">Join Slack</a></p>
                 </div>
                 <div class="col-md-6">
-                    <h2>Conversation</h2>
-                    <p>Come join the conversation around Azure with others from in and around the Milwaukee, WI area!</p>
-                    <p><a class="btn btn-success" href="https://mkeazureslack.azurewebsites.net" target="_blank">Join Slack</a></p>
+                    <a class="twitter-timeline" data-height="400" href="https://twitter.com/MkeAzure?ref_src=twsrc%5Etfw">Tweets by @MkeAzure</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
-        </div>      
+        </div>
+
+        <div class="container">
+            <hr/>
+        </div>
 
         <div class="container">  
             <h2 id="about">About</h2>
@@ -73,6 +84,10 @@
                     <li><a href="https://www.linkedin.com/in/kevinmziegler" target="_blank">Kevin Ziegler</a></li>
                 </ul>
             </p>
+        </div>
+
+        <div class="container">
+            <hr/>
         </div>
 
         <div class="container">
