added Meetup widget and Bootcamp image

--- a/index.htm
+++ b/index.htm
@@ -41,12 +41,26 @@
             <h3><img class="logo" src="images/MkeAzure-Logo-Transparent.png" /> Milwaukee Azure</h3>
         </div>
         
-        <div class="jumbotron jumbotron-bootcamp">
-            <h1 class="display-3">2018 Global Azure Bootcamp!</h1>
+        <div class="jumbotron">
+            <h1 class="display-3"><img class="jumbotron-bootcamp" alt="2018 Global Azure Bootcamp - Milwaukee, WI" src="images/2018-global-azure-bootcamp.png"></h1>
             <p class="lead">Register to attend the 2018 Global Azure Bootcamp in Milwaukee! We have some great sessions lined up, including 2 IoT sessions, Azure Search, Azure ML, Azure Cosmos DB, and more!</p>
             <p><a class="btn btn-lg btn-success" href="https://www.eventbrite.com/e/2018-milwaukee-global-azure-bootcamp-day-tickets-42379895408" target="_blank">Register for Free</a></p>
         </div>
-  
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Meetups</h2>
+                    <p>Interested in attending a meetup? Come learn, meet great people, and get some free food!</p>
+                    <p><a class="btn btn-info" href="http://www.meetup.com/Milwaukee-Azure-Meetup/" target="_blank">View Meetups</a></p>
+                </div>
+                <div class="col-md-6">
+                    <h2>Conversation</h2>
+                    <p>Come join the conversation around Azure with others from in and around the Milwaukee, WI area!</p>
+                    <p><a class="btn btn-success" href="https://mkeazureslack.azurewebsites.net" target="_blank">Join Slack</a></p>
+                </div>
+            </div>
+        </div>      
 
         <div class="container">
             <hr/>
@@ -54,16 +68,10 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                        <h2>Meetups</h2>
-                        <p>Interested in attending a meetup? Come learn, meet great people, and get some free food!</p>
-                        <p><a class="btn btn-info" href="http://www.meetup.com/Milwaukee-Azure-Meetup/" target="_blank">View Meetups</a></p>
-                        
-                        <h2>Conversation</h2>
-                        <p>Come join the conversation around Azure with others from in and around the Milwaukee, WI area!</p>
-                        <p><a class="btn btn-success" href="https://mkeazureslack.azurewebsites.net" target="_blank">Join Slack</a></p>
+                <div class="col-md-5">
+                    <iframe width="225" height="400" src="http://meetu.ps/3hD0q0" frameborder="0"></iframe>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-7">
                     <a class="twitter-timeline" data-height="400" href="https://twitter.com/MkeAzure?ref_src=twsrc%5Etfw">Tweets by @MkeAzure</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
